# lines-cli

./: .clang-tidy  .clangd  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Makefile  README.md  conanfile.txt  lines_tasks.json
.github/workflows/: build.yml  release.yml
include/cli/: root.hpp
include/cli/tasks/: filter.hpp  tasks.hpp
include/client-utils/: parsers.hpp  utils.hpp
include/storages/tasks/: json.hpp
latercli/: CMakeLists.txt  latercli.hpp
latercli/include/CLI11/: CLI11.hpp
latercli/include/storage/: CMakeLists.txt
latercli/include/storage/tasks_storage/: tasks_storage.h
scripts/: install.sh
src/: CMakeLists.txt  main.cpp
src/cli/: root.cpp  root.hpp
src/cli/docs/: docs.cpp  docs.hpp
src/cli/docs/manuals/: manuals.hpp
src/cli/tasks/: filter.cpp  filter.hpp  tasks.cpp  tasks.hpp
src/client-utils/: colors.hpp  config.hpp  filesystem.cpp  filesystem.hpp  parsers.cpp  parsers.hpp  utils.cpp  utils.hpp
src/latercli/: latercli.cpp
src/storage/tasks_storage/: tasks_storage.cpp
src/storages/config/: json.cpp  json.hpp
src/storages/tasks/: json.cpp  json.hpp
src/storages/utils/: filesystem.cpp  filesystem.hpp
tests/: CMakeLists.txt
tests/parsers/: parsers_tests.cpp
